--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,13 +9,20 @@
     <div class="row">
       <div class="col-lg-8 mx-auto">
 
-        {{ .Params.seat }}<i class="ti-user mb-3"></i>
+        
         
         <img src="{{ .Params.image | absURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
         <h2 class="mb-4">{{ .Title }}</h2>
 
-<a href="https://api.whatsapp.com/send?phone=60125349374&text=I%20like%20to%20book%20{{ .Title }}%20at%20{{ .Permalink | absURL }}%20at%20RM{{ .Params.price}}" class="btn btn-success float-right">WhatsApp</a>
-        <div class="content">{{.Content}}</div>
+
+<a href="https://api.whatsapp.com/send?phone=60125349374&text=I%20like%20to%20book%20{{ .Title }}%20at%20{{ .Permalink | absURL }}%20at%20RM{{ .Params.price}}" class="btn btn-success float-right m1">WhatsApp</a>
+
+  
+        <div class="content">
+          <p>{{ .Params.seat }}<i class="ti-user mb-3"></i></p>
+          
+          {{.Content}}
+        </div>
 
       </div>
     </div>
